make portal div fixed position and big z-index

--- a/src/components/Menu/_index.scss
+++ b/src/components/Menu/_index.scss
@@ -2,7 +2,6 @@
     position: fixed;
     background-color: hsl(0 0% 0% / 0.5);
     inset: 0;
-    z-index: 100;
 }
 
 .menu {
@@ -12,13 +11,11 @@
     left: 50%;
     top: 50%;
     translate: -50% -50%; 
-    isolation: isolate;
     background-color: var(--theme-color-2);
     width: 35rem;
     height: 50rem;
     max-height: 75%;
     border-radius: 1rem;
-    z-index: 1000;
 
     .menu-header {
         display: flex;
